# camera_simulator

./: CMakeLists.txt  README.md
include/: camera_simulator.h
opengl/: equi.geom  equi.vert  fe.geom  fe.vert  fragShader.frag  pers.vert
src/: camera_simulator.cpp  run_test.cpp
